<resources>
    <string name="app_name">MApsProject</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="ranking">Ranking</string>
    <string name="mapp">MApp</string>
    <string name="repeat_password">Repeat password</string>
    <string name="play">PLAY</string>
    <string name="show_marker">Show Marker</string>
    <string name="hint">Hint</string>
</resources>