<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_top"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_map"
                        android:layout_width="wrap_content"
                        android:layout_height="90dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_map" />

                    <TextView
                        android:id="@+id/lan_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/mapp"
                        android:textColor="#44AF69"
                        android:textSize="48sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/register_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="300dp"
                        android:backgroundTint="#000000"
                        android:ems="10"
                        android:hint="@string/username"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:textColor="#000000"
                        android:textColorHint="#000000"
                        tools:ignore="UnusedAttribute" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/register_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="300dp"
                        android:backgroundTint="#000000"
                        android:ems="10"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:textColor="#000000"
                        android:textColorHint="#000000"
                        tools:ignore="NestedWeights,UnusedAttribute" />

                    <EditText
                        android:id="@+id/register_pass2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="300dp"
                        android:backgroundTint="#000000"
                        android:ems="10"
                        android:hint="@string/repeat_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:textColor="#000000"
                        android:textColorHint="#000000"
                        tools:ignore="NestedWeights,UnusedAttribute" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:paddingStart="80dp"
                    android:paddingLeft="80dp"
                    android:paddingTop="10dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry">

                    <TextView
                        android:id="@+id/login_intent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/sign_in"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/registerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textColor="#000000"
                        app:backgroundTint="#FFFFFF" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|right"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/rankingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="125dp"
                android:layout_marginRight="125dp"
                android:layout_marginBottom="55dp"
                android:padding="10sp"
                android:text="@string/ranking"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_bot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-1dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_bot"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>